--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "ios": "expo start --ios",
     "web": "expo start --web",
     "build:web": "npx expo export",
+    "build:android": "eas build --platform android",
     "lint": "expo lint"
   },
   "dependencies": {
