--- a/app.json
+++ b/app.json
@@ -13,7 +13,7 @@
     },
     "android": {
       "package": "com.detailsmobile.app",
-      "versionCode": 1,
+      "versionCode": 2,
       "adaptiveIcon": {
         "backgroundColor": "#E6F4FE",
         "foregroundImage": "./assets/images/android-icon-foreground.png",
@@ -49,6 +49,12 @@
     "experiments": {
       "typedRoutes": true,
       "reactCompiler": true
+    },
+    "extra": {
+      "router": {},
+      "eas": {
+        "projectId": "0d9dbc71-9c6c-4cea-ad6a-dae849f4f46a"
+      }
     }
   }
 }
